--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "waterrower-ble",
   "version": "0.1.0",
   "description": "A Cycling Power Bluetooth LE Service for the WaterRower S4",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "repository": "olympum/waterrower-ble",
   "engines": {
