--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url" : "https://github.com/olympum"
   },
   "dependencies": {
-    "bleno": ">0.1.4",
+    "bleno": ">=0.3.3",
     "serialport": "2.0.5",
     "usb": "1.1.1",
     "q": "1.4.1"
