--- a/node-waterrower.service
+++ b/node-waterrower.service
@@ -1,5 +1,5 @@
 [Service]
-ExecStart=/usr/local/bin/node main.js --usb
+ExecStart=/usr/local/bin/node main.js usb
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
