--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ble-cycling-power": "olympum/ble-cycling-power",
     "debug": "^2.2.0",
     "q": "^1.4.1",
-    "serialport": "^4.0.3",
+    "serialport": "3.1.2",
     "usb": "^1.2.0"
   }
 }
